[package]
name = "tauriless-js"
version = "0.2.2"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
edition = "2018"
description = "JS WASM bindings for tauriless"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JohnScience/tauriless/"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
tauriless_serde = "0.2"
console_error_panic_hook = { version = "0.1.7", optional = true }
serde-wasm-bindgen = "0.6.3"
web-sys = { version = "0.3.68", features = [
    "XmlHttpRequest",
    "XmlHttpRequestResponseType",
    "Event",
] }
js-sys = "0.3.68"
tauriless_common = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

# [profile.release]
# # Tell `rustc` to optimize for small code size.
# opt-level = "s"
