[package]
name = "tauriless"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Run a Tauri-like application without installation."
repository = "https://github.com/JohnScience/tauriless/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.197"
serde_json = "1.0.114"
tauriless_serde = "0.2"
tauriless_macro = "0.2"
wry = "0.37.0"
tauriless_common = "0.2"
