[package]
name = "tauriless_common"
description = "Common implementation details of the `tauriless` project."
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JohnScience/tauriless"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
