[package]
name = "tauriless_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
dyn-clone = "1.0.16"
impls = "1.0.3"
itertools = "0.12.1"
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.49", features = ["full"] }
thiserror = "1.0.57"
tauriless_common = { path = "../tauriless_common" }

[dev-dependencies]
serde = "1.0.197"
wry = "0.37.0"
