[package]
name = "tauriless_macro"
description = "The proc-macro crate for tauriless"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JohnScience/tauriless/"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
dyn-clone = "1"
itertools = "0"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
thiserror = "1"
tauriless_common = "0.2"

[dev-dependencies]
serde = "1.0.197"
wry = "0.37.0"
tauriless = { path = "../tauriless" }
tao = "0.26.0"
tokio = { version = "1.36.0", features = ["rt", "sync", "rt-multi-thread"] }
serde_json = "1.0.114"
serde-wasm-bindgen = "0.6.4"
wasm-bindgen = "0.2.91"
pot = "3.0.0"
