[package]
name = "tauriless_serde"
description = "Implementation details of serialization and deserialization of messages for `tauriless`"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/JohnScience/tauriless/"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pot = "3.0.0"
serde = "1.0.197"
serde-wasm-bindgen = "0.6.4"
thiserror = "1.0.57"
wasm-bindgen = "0.2.91"

[dev-dependencies]
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.114"
wasm-bindgen-test = "0.3.0"
